Fix spacing

--- a/input-error.css
+++ b/input-error.css
@@ -1,5 +1,5 @@
 .input-error {
-	display: none;
-	font: 10px "Poppins", serif;
-	color: #E45865;
+  display: none;
+  font: 10px "Poppins", serif;
+  color: #e45865;
 }
